--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,17 @@ body,
   overflow: hidden;
 }
 
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+  /* Firefox */
+}
+
 /* Main app layout */
 .app-wrapper {
   display: flex;
